welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:3: error: reassignment to val
		if(die1 = 6) {
                        ^withoutDoubles:4: error: reassignment to val
			return die1 = 1
                                    ^